<resources>
    <string name="app_name">BodilySensonBLE</string>
    <string name="alert_title">Warning!</string>
    <string name="alert_msg">Location is required to use the Bluetooth function</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Setting</string>

    <string name="record">Record</string>
    <string name="scan">Scan</string>
    <string name="clear">Clear</string>
    <string name="stop">Stop</string>

    <string name="respiration">Respiration: --</string>
    <string name="weight">Weight: --</string>
    <string name="heartbeat">Heartbeat --</string>

    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="signout">Sign Out</string>
    <string name="age">Age</string>
    <string name="phone_number">Phone Number (###-###-####)</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday (YYYY-MM-DD)</string>

    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Unspecified</item>
    </string-array>

    <string-array name="user_types">
        <item>Patient</item>
        <item>Provider</item>
    </string-array>

</resources>