<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUpActivity">

    <EditText
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/first_name"
        android:id="@+id/signUp_first_name"
        android:inputType="textCapSentences"/>

    <EditText
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/last_name"
        android:id="@+id/signUp_last_name"
        android:inputType="textCapSentences"
        android:layout_below="@id/signUp_first_name" />

    <EditText
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:id="@+id/signUp_email"
        android:inputType="textEmailAddress"
        android:layout_below="@id/signUp_last_name"/>

    <EditText
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signUp_email"
        android:id="@+id/signUp_password"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signUp_password"
        android:id="@+id/signUp_confirm_password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signUp_confirm_password"
        android:id="@+id/signUp_ph"
        android:hint="@string/phone_number"
        android:inputType="textCapSentences"/>

    <EditText
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signUp_ph"
        android:id="@+id/signUp_birthday"
        android:hint="@string/birthday"
        android:inputType="textCapSentences"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/signUp_gender"
        android:layout_below="@+id/signUp_birthday"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/signUp_user_type"
        android:layout_below="@+id/signUp_gender"
        android:layout_marginTop="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/signup"
        android:layout_below="@id/signUp_user_type"
        android:id="@+id/signUp_btn"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>