<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignInActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/signIn_signup" />

    <EditText
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:id="@+id/signIn_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signIn_email"
        android:id="@+id/signIn_password"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/signin"
        android:layout_below="@id/signIn_password"
        android:id="@+id/signIn_btn"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>